feat: book recommendations in Catalog page. fix: slide timeout is added multiple times causing it to auto-forward quickly.